--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SubmitActivity"
+            android:label="@string/title_activity_submit"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".SplashScreen" />
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
