Fixed up action in SubmitActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SubmitActivity"
-            android:theme="@style/AppTheme.Nav">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".MainActivity">
 
         </activity>
         <activity android:name=".SplashScreen" >
